[fix] word wrap

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  white-space: normal !important;
+}
+
 body {
   margin: 0;
   padding: 0;
